--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 buildscript {
-    
 
     repositories {
         mavenLocal()
@@ -14,7 +13,7 @@ buildscript {
         classpath 'org.gretty:gretty:3.0.2'
         classpath 'com.android.tools.build:gradle:3.5.4'
         classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.12'
-        
+        classpath 'com.google.gms:google-services:4.3.5'
 
     }
 }
@@ -123,3 +122,4 @@ project(":core") {
         
     }
 }
+
