--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+
+
 buildscript {
 
     repositories {
@@ -11,11 +13,12 @@ buildscript {
     dependencies {
         classpath 'org.wisepersist:gwt-gradle-plugin:1.0.13'
         classpath 'org.gretty:gretty:3.0.2'
-        classpath 'com.android.tools.build:gradle:3.5.4'
+        classpath 'com.android.tools.build:gradle:4.1.2'
         classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.12'
         classpath 'com.google.gms:google-services:4.3.5'
 
     }
+
 }
 
 allprojects {
@@ -57,6 +60,8 @@ project(":desktop") {
 
 project(":android") {
     apply plugin: "com.android.application"
+    apply plugin: 'com.android.application'
+    apply plugin: 'com.google.gms.google-services'
 
     configurations { natives }
 
@@ -74,6 +79,17 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-arm64-v8a"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86_64"
+        // Import the Firebase BoM
+        implementation platform('com.google.firebase:firebase-bom:26.7.0')
+
+        // Add the dependency for the Firebase SDK for Google Analytics
+        // When using the BoM, don't specify versions in Firebase dependencies
+        implementation 'com.google.firebase:firebase-analytics'
+        implementation 'com.google.firebase:firebase-database'
+
+        // Add the dependencies for any other desired Firebase products
+        // https://firebase.google.com/docs/android/setup#available-libraries
+
         
     }
 }
