--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:isGame="true"
         android:appCategory="game"
         android:label="@string/app_name"
-        android:theme="@style/GdxTheme" >
+        android:theme="@style/GdxTheme"
+        android:usesCleartextTraffic="true">
         <activity
             android:name="poi.game.AndroidLauncher"
             android:label="@string/app_name" 
